# agent-cdp

./: .gitignore  CLAUDE.md  LICENSE  README.md  demo_action_dispatch.py  demo_conscribe_pydantic.py  demo_feedback.py  demo_nano.py  demo_real_xhs.py  pyproject.toml
analysis/: agent_cdp_tech_debt_review.md  bubus_design_gaps_in_agent_browser_scenario.md  cdp_usage_comparison_report.md  development_plan_detailed.md  draft_agent_plan.md  feasibility_report_why_agent_cdp.md  proposal_scoped_eventbus.md  stagehand_cdp_learnings.md
demo/: _bench.py  _output.py  action_dispatch.py  advanced.py  bench.py  bench_agentcdp_vs_pw.py  bench_cdp_vs_pw.py  bench_optimizations.py  cdp_client.py  chrome.py  events.py  feedback.py  main.py  multi_tab.py  nano.py  paused_target.py  real_xhs.py  timing.py  verify_diagnostics.py  watchdogs.py
qt_ref/qt/: 01_signals_and_slots.md  02_connection_type_enum.md  03_qobject_connect.md  04_event_system.md  05_qevent.md  06_send_post_event.md  07_threads_and_qobjects.md  08_qeventloop.md  09_qthread.md  10_event_filter.md  11_property_system.md  12_state_machine.md  13_meta_object_system.md  14_moc.md  15_woboq_signal_internals.md  16_gobject_signals.md  README.md
src/agent_cdp/: __init__.py  _context.py  _protocols.py  _registry.py  _watchdog_registry.py  bridge.py
src/agent_cdp/advanced/: __init__.py  cycle_detect.py  event_log.py  expect.py  timeout.py
src/agent_cdp/connection/: __init__.py  connection.py  types.py
src/agent_cdp/events/: __init__.py  aggregation.py  base.py  result.py
src/agent_cdp/scope/: __init__.py  _helpers.py  event_loop.py  group.py  scope.py
tests/: test_diamond_inheritance.py  test_h1_type_safety.py  test_h2_public_api.py  test_h3_cdp_bridge.py  test_h4_await_timeout.py  test_h5_bridge_diagnostics.py  test_h5_timeout_diagnostics.py  test_hierarchical_keys.py  test_m1_async_handler_error.py  test_m2_queued_logging.py  test_m3_filter_safety.py  test_m5_watchdog_registry.py  test_m7_emit_and_wait.py  test_paused_target.py  test_perf_deadlock_monitor.py  test_perf_mro_cache.py  test_step_1_1_event_result.py  test_step_1_2_base_event.py  test_step_1_3_aggregation.py  test_step_2_1_connection.py  test_step_2_2_scope_emit.py  test_step_2_3_event_loop.py  test_step_3_1_scope_group.py  test_step_3_2_lifecycle.py  test_step_4_1_expect_timeout.py  test_step_4_2_event_log_cycle.py
